--- a/week03/code/theStyle.css
+++ b/week03/code/theStyle.css
@@ -9,6 +9,10 @@ body {
   border-radius: 60px;
   text-align: center;
 }
+#thebuttons {
+	/* this is flex display - we'll get to it in week 5 */
+	display: flex;
+}
 button {
   padding: 40px;
   border: solid 10px;
@@ -16,7 +20,9 @@ button {
   background-color: rgba(0,100,100);
   margin: 50px;
 }
-
+button:hover{
+	background-color: yellow;
+}
 button div {
   border: solid 10px;
 }
