--- a/week11/code/style.css
+++ b/week11/code/style.css
@@ -15,3 +15,15 @@ background-color: green;
 padding: 3vh;
 margin: 2vh;
 }
+
+h3 {
+ font-size: 24px;
+}
+
+#target {
+ background-color: yellow;
+}
+
+#target:hover {
+ background-color: blue;
+}
